--- a/FraudDetection/FraudDetection.csproj
+++ b/FraudDetection/FraudDetection.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.ML.LightGbm" Version="1.5.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="assets\output\" />
+  </ItemGroup>
+
 </Project>
